made changes to all my files

--- a/contact.css
+++ b/contact.css
@@ -300,5 +300,38 @@ form{
     h1 {
         margin-top: 40px;
     }
+    .right-form{
+        border-left:none;
+    }
+    .text{
+        font-size:14px;
+        color:rgb(0, 0, 0);
+        margin-top:20px;
+    }
+    .heading{
+        font-size:20px;
+        font-weight:600;
+        line-height:1;
+        color:gray;
+        margin-top:80px;
+    }
+    .logo img{
+        max-width:70px;
+        height:auto;
+        
+     }
+     .visual img{
+        width:60%;
+        margin:auto;
+        margin-top:30px;
+    }
+    .sidebar img {
+        max-width:100px;
+        height:auto;
+        margin-top:20px;
+        display: flex;
+        width:100vw;
+        
+    }
 
     }
