--- a/contact.css
+++ b/contact.css
@@ -107,10 +107,6 @@ nav {
     color:black;
 }
 
-
-
-
-
 /*Start Of Form*/
 .container{
     position:relative;
@@ -271,6 +267,17 @@ form{
 
     }
 }
+    .visually-hidden {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        padding: 0;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        border: 0;
+    }
+
 
 
 @media(max-width:667px){
