--- a/styles.css
+++ b/styles.css
@@ -74,37 +74,32 @@ nav {
 
 /*Sidebar display*/
 .sidebar {
-    position:fixed;
-    top:0;
-    right:0;
-    height:100vh;
-    width:260px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 260px;
     z-index: 999;
-    background-color:#d9d8d8a2;
+    background-color: #d9d8d8a2;
     backdrop-filter: blur(10px);
     box-shadow: -10px 0 10px rgba(159, 71, 71, 0.1);
-    display:none;
-    flex-direction:column;
-    align-items:center;
+    display: none;
+    flex-direction: column;
+    align-items: center;
     justify-content: flex-start;
-    
+    text-align: center; /* Center text */
 }
 
 .sidebar li {
-    width:100%;
-    
+    width: 100%;
 }
 
 .sidebar a {
-    width:100%;
+    width: 100%;
 }
 .sidebar img {
-    max-width:120px;
-    height:auto;
-    margin-top:20px;
-    display: flex;
-    width:100vw;
-    
+    display: block;
+    margin: 0 auto; 
 }
 
 .list2 {
@@ -413,6 +408,7 @@ header.sticky{
         padding:15px 20px;
         transition: all .42s ease;
         width:7%;
+        
     
       }
  
@@ -432,7 +428,7 @@ header.sticky{
     }
     
     .down-arrow i{
-        font-size:30px;
+        font-size:20px;
         color:#111;
         border:2px solid #492c1e;
         border-radius: 50px;
@@ -456,25 +452,11 @@ header.sticky{
         font-size:16px;
         font-weight:500;
         text-transform:capitalize;
-        border:2px solid black;
+        border:none;
         padding:16px 40px;
         transition: all .42s ease;
         width:7%;
     }
-
-    /* .searchBoxCon {
-        display: none;
-        padding: 10px;
-    }
-    
-    #searchBox {
-        padding: 5px;
-        border: 1px solid #ccc;
-        border-radius: 20px;
-        outline: none;
-        font-size: 12px;
-        width: 130px;
-    } */
 
     .logo img{
         max-width:80px;
